--- a/force-app/main/default/sonar-project.properties
+++ b/force-app/main/default/sonar-project.properties
@@ -1,1 +1,7 @@
-sonar.projectKey=Test-Projectsonar.projectName=Test Projectsonar.projectVersion=1.0sonar.sources=srcsonar.language=tssonar.host.url=http://localhost:9000sonar.token=your_tokensonar.sourceEncoding=UTF-8
+sonar.projectKey=Test-Project
+sonar.projectName=Test Projectsonar.projectVersion=1.0
+sonar.sources=src
+sonar.language=ts
+sonar.host.url=http://localhost:9000
+sonar.token=sqb_ad57e791c0f28aee9f736af41a5ce7c204d12e71
+sonar.sourceEncoding=UTF-8
