--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,8 @@
-sonar.projectKey=Test-Project
-sonar.projectName=Test Projectsonar.projectVersion=1.0
+sonar.projectKey=sonar-project
+sonar.projectName=sonar project
+sonar.projectVersion=1.0
 sonar.sources=src
-sonar.language=ts
+sonar.language=js
 sonar.host.url=http://localhost:9000
-sonar.token=sqb_ad57e791c0f28aee9f736af41a5ce7c204d12e71
+sonar.token=sqp_9474f5b506495a1a4ef12ad16d6a17522e59ff1c
 sonar.sourceEncoding=UTF-8
