--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=sonar-project
 sonar.projectName=sonar project
 sonar.projectVersion=1.0
-sonar.sources=src
+sonar.sources=force-app
 sonar.language=js
 sonar.host.url=http://localhost:9000
 sonar.token=sqp_9474f5b506495a1a4ef12ad16d6a17522e59ff1c
